[project]
name = "dvplc"
description = "CLI app to convert Dava SmartDLC .dvpl files used in Wargaming.net's World of Tanks Bliz MMO game"
readme = "README.md"
version = "0.3.0"
authors = [{ name = "Jylpah", email = "jylpah@gmail.com" }]
license = { text = "MIT License" }
requires-python = ">=3.10"
classifiers = [
	"Programming Language :: Python :: 3",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
	"Environment :: Console",
]
dependencies = [
	"lz4>=4.3.2",
	"aiofiles>=23.1.0",
	"aioconsole>=0.6.1",
	"pyutils @ git+https://github.com/Jylpah/pyutils.git@main-1.0",
    "result>=0.15.0", 
    "typer>=0.9.0",
]

[project.optional-dependencies]
dev = [
	"build>=0.10.0",
    "jupyter>=1.0.0",
	"mypy>=1.2.0",
	"pip-chill>=1.0.3",
	"pytest>=7.4.3",
	"pytest-asyncio",
	"pytest-datafiles",
    "pytest-cov>=4.1.0",
	"pytest-mypy",
    "ruff>=0.1.9",
	"types-aiofiles>=23.1.0.1",
]

[project.scripts]
dvplc = "dvplc.dvplc:cli_main"

[project.urls]
"Homepage" = "https://github.com/Jylpah/dvplc"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/dvplc"]

[tool.mypy]
mypy_path = ['src']

[tool.pyright]
reportGeneralTypeIssues = false

[tool.black]
# line-length = 120
include = '\.pyi?$'

[tool.coverage.run]
omit= ['tests/*']

[tool.pytest.ini_options]
minversion = "7.4"
addopts = "-v --cov=src"
pythonpath = "src" # avoid import path append in test files
filterwarnings = [
	'ignore:Inheritance class ThrottledClientSession from ClientSession is discouraged:DeprecationWarning',
]
